# POKER_APP

./: CMakeLists.txt  CMakeUserPresets.json  README.md  SettingsManager.cpp  SettingsManager.h  backend.cpp  backend.h  main.cpp  resource.h  resources.rc
classes/: GameCard.cpp  GameCard.h  Player.cpp  Player.h
engine/: gamebackend.h  margin_calc.h  prompt_options.h
enums/: GameEnums.h
general/: Utils.h  bet_expressions.h  globals.cpp  globals.h  poker_structs.h
resources/: ConnectPage.qml  Credits.qml  FadeImage.qml  FlipCard.qml  GamePage.qml  LobbyPage.qml  MainMenu.qml  OptionsPage.qml  SignUpPage.qml  TutorialPopup.qml  main.qml
